implemented a way to save symbol table in file